// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrdersTileItem component should render correctly 1`] = `
<Styled(View)
  spacingStyles="margin-bottom-MED"
>
  <Styled(View)>
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.900"
      dataLocator=""
      fontSize="fs14"
      fontWeight="regular"
      margin={null}
      mobilefontFamily={
        Array [
          "secondary",
        ]
      }
      numberOfLines={null}
      text="lbl_ordersTile_orderNum"
      textDecoration={null}
    />
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.900"
      dataLocator=""
      fontSize="fs14"
      fontWeight="regular"
      margin={null}
      mobilefontFamily={
        Array [
          "secondary",
        ]
      }
      numberOfLines={null}
      text=": "
      textDecoration={null}
    />
    <Styled(Anchor)
      accessibilityLabel=""
      anchorVariation="primary"
      colorName={null}
      customStyle={Object {}}
      dataLocator="order-number-value"
      fontFamily="secondary"
      fontSize="fs14"
      fontSizeVariation="large"
      locator=""
      onPress={null}
      text=""
      underline={true}
      visible={false}
    >
      <Styled(BodyCopy)
        accessibilityText=""
        color="gray.900"
        dataLocator=""
        fontSize="fs14"
        fontWeight="regular"
        margin={null}
        mobilefontFamily={
          Array [
            "secondary",
          ]
        }
        numberOfLines={null}
        text="7000037172"
        textDecoration={null}
      />
    </Styled(Anchor)>
  </Styled(View)>
  <Styled(View)>
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.900"
      dataLocator=""
      fontSize="fs14"
      fontWeight="regular"
      margin={null}
      mobilefontFamily={
        Array [
          "secondary",
        ]
      }
      numberOfLines={null}
      text="lbl_orders_orderDate"
      textDecoration={null}
    />
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.900"
      dataLocator=""
      fontSize="fs14"
      fontWeight="regular"
      margin={null}
      mobilefontFamily={
        Array [
          "secondary",
        ]
      }
      numberOfLines={null}
      text=": "
      textDecoration={null}
    />
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.900"
      dataLocator=""
      fontSize="fs14"
      fontWeight="regular"
      margin={null}
      mobilefontFamily={
        Array [
          "secondary",
        ]
      }
      numberOfLines={null}
      text="Oct 6, 2019"
      textDecoration={null}
    />
  </Styled(View)>
  <Styled(View)>
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.900"
      dataLocator=""
      fontSize="fs14"
      fontWeight="regular"
      margin={null}
      mobilefontFamily={
        Array [
          "secondary",
        ]
      }
      numberOfLines={null}
      text="lbl_ordersTile_purchase"
      textDecoration={null}
    />
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.900"
      dataLocator=""
      fontSize="fs14"
      fontWeight="regular"
      margin={null}
      mobilefontFamily={
        Array [
          "secondary",
        ]
      }
      numberOfLines={null}
      text=": "
      textDecoration={null}
    />
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.900"
      dataLocator=""
      fontSize="fs14"
      fontWeight="regular"
      margin={null}
      mobilefontFamily={
        Array [
          "secondary",
        ]
      }
      numberOfLines={null}
      text="lbl_orders_online"
      textDecoration={null}
    />
  </Styled(View)>
  <Styled(View)>
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.900"
      dataLocator=""
      fontSize="fs14"
      fontWeight="regular"
      margin={null}
      mobilefontFamily={
        Array [
          "secondary",
        ]
      }
      numberOfLines={null}
      text="lbl_orders_orderStatus"
      textDecoration={null}
    />
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.900"
      dataLocator=""
      fontSize="fs14"
      fontWeight="regular"
      margin={null}
      mobilefontFamily={
        Array [
          "secondary",
        ]
      }
      numberOfLines={null}
      text=": "
      textDecoration={null}
    />
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.900"
      dataLocator=""
      fontSize="fs14"
      fontWeight="regular"
      margin={null}
      mobilefontFamily={
        Array [
          "secondary",
        ]
      }
      numberOfLines={null}
      text="lbl_orders_statusNa"
      textDecoration={null}
    />
  </Styled(View)>
  <Styled(View)>
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.900"
      dataLocator=""
      fontSize="fs14"
      fontWeight="regular"
      margin={null}
      mobilefontFamily={
        Array [
          "secondary",
        ]
      }
      numberOfLines={null}
      text="lbl_orders_orderTotal"
      textDecoration={null}
    />
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.900"
      dataLocator=""
      fontSize="fs14"
      fontWeight="regular"
      margin={null}
      mobilefontFamily={
        Array [
          "secondary",
        ]
      }
      numberOfLines={null}
      text=": "
      textDecoration={null}
    />
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.900"
      dataLocator=""
      fontSize="fs14"
      fontWeight="regular"
      margin={null}
      mobilefontFamily={
        Array [
          "secondary",
        ]
      }
      numberOfLines={null}
      text="$24.95"
      textDecoration={null}
    />
  </Styled(View)>
</Styled(View)>
`;

exports[`OrdersTileItem component should render correctly 2`] = `
<Styled(View)
  spacingStyles="margin-bottom-MED"
>
  <Styled(View)>
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.900"
      dataLocator=""
      fontSize="fs14"
      fontWeight="regular"
      margin={null}
      mobilefontFamily={
        Array [
          "secondary",
        ]
      }
      numberOfLines={null}
      text="lbl_ordersTile_orderNum"
      textDecoration={null}
    />
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.900"
      dataLocator=""
      fontSize="fs14"
      fontWeight="regular"
      margin={null}
      mobilefontFamily={
        Array [
          "secondary",
        ]
      }
      numberOfLines={null}
      text=": "
      textDecoration={null}
    />
    <Styled(Anchor)
      accessibilityLabel=""
      anchorVariation="primary"
      colorName={null}
      customStyle={Object {}}
      dataLocator="order-number-value"
      fontFamily="secondary"
      fontSize="fs14"
      fontSizeVariation="large"
      locator=""
      onPress={null}
      text=""
      underline={true}
      visible={false}
    >
      <Styled(BodyCopy)
        accessibilityText=""
        color="gray.900"
        dataLocator=""
        fontSize="fs14"
        fontWeight="regular"
        margin={null}
        mobilefontFamily={
          Array [
            "secondary",
          ]
        }
        numberOfLines={null}
        textDecoration={null}
      />
    </Styled(Anchor)>
  </Styled(View)>
  <Styled(View)>
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.900"
      dataLocator=""
      fontSize="fs14"
      fontWeight="regular"
      margin={null}
      mobilefontFamily={
        Array [
          "secondary",
        ]
      }
      numberOfLines={null}
      text="lbl_orders_orderDate"
      textDecoration={null}
    />
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.900"
      dataLocator=""
      fontSize="fs14"
      fontWeight="regular"
      margin={null}
      mobilefontFamily={
        Array [
          "secondary",
        ]
      }
      numberOfLines={null}
      text=": "
      textDecoration={null}
    />
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.900"
      dataLocator=""
      fontSize="fs14"
      fontWeight="regular"
      margin={null}
      mobilefontFamily={
        Array [
          "secondary",
        ]
      }
      numberOfLines={null}
      textDecoration={null}
    />
  </Styled(View)>
  <Styled(View)>
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.900"
      dataLocator=""
      fontSize="fs14"
      fontWeight="regular"
      margin={null}
      mobilefontFamily={
        Array [
          "secondary",
        ]
      }
      numberOfLines={null}
      text="lbl_ordersTile_purchase"
      textDecoration={null}
    />
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.900"
      dataLocator=""
      fontSize="fs14"
      fontWeight="regular"
      margin={null}
      mobilefontFamily={
        Array [
          "secondary",
        ]
      }
      numberOfLines={null}
      text=": "
      textDecoration={null}
    />
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.900"
      dataLocator=""
      fontSize="fs14"
      fontWeight="regular"
      margin={null}
      mobilefontFamily={
        Array [
          "secondary",
        ]
      }
      numberOfLines={null}
      text="lbl_orders_pickupStore"
      textDecoration={null}
    />
  </Styled(View)>
  <Styled(View)>
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.900"
      dataLocator=""
      fontSize="fs14"
      fontWeight="regular"
      margin={null}
      mobilefontFamily={
        Array [
          "secondary",
        ]
      }
      numberOfLines={null}
      text="lbl_orders_orderStatus"
      textDecoration={null}
    />
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.900"
      dataLocator=""
      fontSize="fs14"
      fontWeight="regular"
      margin={null}
      mobilefontFamily={
        Array [
          "secondary",
        ]
      }
      numberOfLines={null}
      text=": "
      textDecoration={null}
    />
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.900"
      dataLocator=""
      fontSize="fs14"
      fontWeight="regular"
      margin={null}
      mobilefontFamily={
        Array [
          "secondary",
        ]
      }
      numberOfLines={null}
      textDecoration={null}
    />
  </Styled(View)>
  <Styled(View)>
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.900"
      dataLocator=""
      fontSize="fs14"
      fontWeight="regular"
      margin={null}
      mobilefontFamily={
        Array [
          "secondary",
        ]
      }
      numberOfLines={null}
      text="lbl_orders_orderTotal"
      textDecoration={null}
    />
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.900"
      dataLocator=""
      fontSize="fs14"
      fontWeight="regular"
      margin={null}
      mobilefontFamily={
        Array [
          "secondary",
        ]
      }
      numberOfLines={null}
      text=": "
      textDecoration={null}
    />
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.900"
      dataLocator=""
      fontSize="fs14"
      fontWeight="regular"
      margin={null}
      mobilefontFamily={
        Array [
          "secondary",
        ]
      }
      numberOfLines={null}
      textDecoration={null}
    />
  </Styled(View)>
</Styled(View)>
`;
